# OPD_segmentation

./: .gitignore  README.md  UserManual.md  app.py  app1.py  pyproject.toml  setup.cfg  test_app.py
data/: Data_with_Cluster.xlsx
mlruns/0/: meta.yaml
mlruns/0/0037aed9e91e44da892344fa3236c0b0/: meta.yaml
mlruns/0/02236e8738c54fe499b2d449e46f5cec/: meta.yaml
mlruns/0/03777e13f5c242b98c41021b670d6fc6/: meta.yaml
mlruns/0/0541db8a29904bfba8c9c28c3230fcc0/: meta.yaml
mlruns/0/07fb2ac38374452097cc4a2b917a16a3/: meta.yaml
mlruns/0/0a6e472c9a5d455498a4f528ebdfe52c/: meta.yaml
mlruns/0/0c0400a4f38841349507903abe678238/: meta.yaml
mlruns/0/0cd16fcc6fd94dd09c4d7fb88a51b53f/: meta.yaml
mlruns/0/0f4a51bc8b394db6bf7f5e4766209844/: meta.yaml
mlruns/0/137cadabdae740d1bc4aad7b10de8a54/: meta.yaml
mlruns/0/1405863cf7b04d81b53e2e876beee8d9/: meta.yaml
mlruns/0/1450cb8a00304f47bf8f7c6affb088d3/: meta.yaml
mlruns/0/14d8b9569a7746d38c82d058f0c65d20/: meta.yaml
mlruns/0/16788a12b9bc495faf270555c1397004/: meta.yaml
mlruns/0/180b5a49cde94f12996b5141fe913fe1/: meta.yaml
mlruns/0/1c0427c3c08a4e1583ba23d204810fd0/: meta.yaml
mlruns/0/1c7844d6dea54363ae27dca6a284ab2c/: meta.yaml
mlruns/0/25aaaa4f6fdc4d5f82b5a55af0a24435/: meta.yaml
mlruns/0/31da3e7cd564469699c4730577dfdd7c/: meta.yaml
mlruns/0/33467d30053a4bab967ea6b8ea67fe67/: meta.yaml
mlruns/0/336ac8657de64b619eef05cbca919df0/: meta.yaml
mlruns/0/33d4218b18d545a8bf713faef32c9562/: meta.yaml
src/insight/: model_utils.py  models.py  utils.py
tests/: test_utils.py
(+644 files in other folders)
