[metadata]
name = insight
version = 0.0.1
description = A quick streamlit demo with clustering models
long_description = file: README.md
long_description_content_type = text/markdown
author = Muhammed Amr
author_email = muhammedamr57@gmail.com
url = https://github.com/Mhammedammr/OPD_segmentation.git
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

install_requires=
    pandas==2.2.2
    scikit-learn==1.5.1
    tqdm==4.66.5
    matplotlib==3.9.2
    numpy==2.0.2
    plotly==5.24.0
    seaborn==0.13.2
    scipy==1.14.1
    yellowbrick==1.5
    tabulate==0.9.0
    openpyxl==3.1.5
    setuptools==75.8.0

[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3
    autopep8==2.3.1

[options.package_data]
insight = py.typed


[flake8]
max-line-length = 160
extend-ignore = E712, F401, W293, E303, W292